dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-deployment
  labels:
    app: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
        - name: playground
          # 여기서 v1, v2 버전을 변경 가능
          image: wil42/playground:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
