dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  labels:
    app: playground
spec:
  selector:
    app: playground
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
      nodePort: 30080
