dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: playground.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground-service
                port:
                  number: 80
